# Deep-Research-Agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  metrics.py
backend/app/agent/: __init__.py  edges.py  graph.py
backend/app/agent/nodes/: __init__.py  analyst.py  critic.py  curator.py  hunter.py  schemas.py  strategist.py
backend/app/api/: __init__.py  dependencies.py  routes.py  streaming.py
backend/app/models/: __init__.py  events.py  schemas.py  state.py
backend/app/services/: __init__.py  llm.py  search.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_curator.py  test_edges.py  test_hunter.py  test_strategist.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: InputBar.tsx  Layout.tsx  ReasoningPane.tsx  ReportPane.tsx  StatusIndicator.tsx
frontend/src/hooks/: useResearch.ts
frontend/src/types/: index.ts
monitoring/grafana/dashboards/: 01-agent-execution-overview.json  02-llm-token-cost-economics.json  03-loop-dynamics-iterations.json  04-node-level-performance.json  05-tavily-search-performance.json  06-quality-assurance-pipeline.json  07-sse-stream-health.json  08-infrastructure-resources.json  09-e2e-research-timing.json  10-business-intelligence.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
